--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+.table-class * {
+    border: 1px solid black;
+}
+
+.table-class td {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
